tests/tooling/fixtures/native/recovery/negative/negative_global_initializer_forward_reference.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalInitializerForwardReference;

let folded = base + 1;
let base = 3;

fn main() -> i32 {
  return base;
}
